Update gradle build.