@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    buildToolsVersion "23.0.3"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -16,34 +16,15 @@ android {
         incremental true
         preDexLibraries false
     }
-<<<<<<< HEAD
-=======
-
-    testOptions {
-        unitTests.all {
-            jvmArgs '-XX:MaxPermSize=256m'
-        }
-        unitTests.returnDefaultValues = true
-    }
->>>>>>> ab4e25752e613ea6dac42a132f7514649f857973
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    // Codec
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    // Third Parties Libs
     compile 'commons-codec:commons-codec:1.4'
-
-    // Json Parser
     compile 'com.fasterxml.jackson.core:jackson-core:2.6.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.6.1'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.6.1'
-
     // Testing
     testCompile 'junit:junit:4.12'
-<<<<<<< HEAD
-=======
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'org.hamcrest:hamcrest-library:1.1'
->>>>>>> ab4e25752e613ea6dac42a132f7514649f857973
 }
